--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "p3-backend-2023",
   "version": "1.0.0",
   "description": "Se trata de hacer un _backend_ usando Typescript, Express y Prisma. El _backend_ implementado en clase es el modelo a seguir. Para alumnos que lo hacen por primera vez y sienten algo de incomodidad, lo ideal es usar el modelo de guía y hacer un _backend_ cercano al original de tal manera que la práctica sea un repaso a fondo. Para los que estén más cómodos, lo ideal es innovar en algun aspecto y salirse parcialmente del modelo en ciertos momentos o explorar algún interés personal.",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-esm' src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node prisma/seed.ts",
     "cliente": "prisma studio",
@@ -18,7 +19,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.4",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.0",
@@ -28,6 +31,7 @@
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
