--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-esm' src/server.ts",
   "test": "echo \"Error: no test specified\" && exit 1",
+  "docker:up": "docker-compose up -d",
+  "docker:down": "docker-compose down",
     "seed": "ts-node prisma/seed.ts",
     "cliente": "prisma studio",
     "reset-db": "ts-node prisma/resetDb.ts",
