--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-esm' src/server.ts",
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "docker:up": "docker-compose up -d",
-  "docker:down": "docker-compose down",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
     "seed": "ts-node prisma/seed.ts",
     "cliente": "prisma studio",
     "reset-db": "ts-node prisma/resetDb.ts",
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0"
   }
 }
