[configurando] para deploy

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "p3-backend-2023",
   "version": "1.0.0",
-  "description": "Se trata de hacer un _backend_ usando Typescript, Express y Prisma. El _backend_ implementado en clase es el modelo a seguir. Para alumnos que lo hacen por primera vez y sienten algo de incomodidad, lo ideal es usar el modelo de guía y hacer un _backend_ cercano al original de tal manera que la práctica sea un repaso a fondo. Para los que estén más cómodos, lo ideal es innovar en algun aspecto y salirse parcialmente del modelo en ciertos momentos o explorar algún interés personal.",
-  "main": "src/server.ts",
+  "description": "Se trata de hacer un _backend_ usando Typescript, Express y Prisma. El _backend_ implementado en clase es el modelo a seguir...",
+  "main": "build/server.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node-esm' src/server.ts",
+    "build": "tsc",
+    "start": "node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
@@ -14,7 +16,6 @@
     "reload-db": "npm run reset-db && npm run seed",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "prepare": "npm run prisma:generate"
   },
   "keywords": [],
