--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": true,
+      "noEmit": false, 
       "jsx": "preserve"
     },
     "include": [
       "src"
     ]
-  }
+}
